# sfy

./: CMakeLists.txt  LICENSE  README.md
include/fmt/: color.h  core.h  format.h  printf.h
include/sfy/: alias.hpp  concepts.hpp  sfy.hpp  traits.hpp  type.hpp
tests/: all.cpp  ranges.cpp
